@@ -1,3 +1,8 @@
+2003-10-28  Rodney Dawes  <dobey@ximian.com>
+
+	* Makefile.am: Fix automake warning, and add
+	e-shell-user-creatable-items-handler.h to evolution_SOURCES
+
 2003-10-23  Chris Toshok  <toshok@ximian.com>
 
 	* e-component-registry.c (query_components): handle the case where
